[gd_scene load_steps=4 format=3 uid="uid://bfgla0635fjub"]

[ext_resource type="Texture2D" uid="uid://dbp6xw1k6j3o" path="res://Aaliyah/UI/Background/Dungeon Pic.jpeg" id="1_nmwhr"]
[ext_resource type="Script" path="res://Aaliyah/UI/pause_screen.gd" id="1_y8k56"]
[ext_resource type="FontFile" uid="uid://bmtf3mpkawr66" path="res://Aaliyah/UI/Font/ConnectionII.otf" id="2_awryi"]

[node name="PauseScreen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y8k56")

[node name="DungeonPic" type="Sprite2D" parent="."]
position = Vector2(578.5, 326)
scale = Vector2(1.13, 1.14)
texture = ExtResource("1_nmwhr")

[node name="Pause" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 88.0
offset_right = 120.0
offset_bottom = 171.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_awryi")
theme_override_font_sizes/font_size = 80
text = "Pause"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_awryi")
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_awryi")
theme_override_font_sizes/font_size = 50
text = "Save"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_awryi")
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
